存档，之后要大改
2020-03-23 12:00 m
很久前的修改，也不记得修改了什么，这里先存个档。之后要做大的修改。

--- a/pro/mFw.uvprojx
+++ b/pro/mFw.uvprojx
@@ -430,6 +430,21 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>mDriver</GroupName>
+          <Files>
+            <File>
+              <FileName>mUart1Driver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\mDriver\uart\mUart1Driver.c</FilePath>
+            </File>
+            <File>
+              <FileName>mTcpDriver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\mDriver\tcp\mTcpDriver.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>mCore</GroupName>
           <Files>
             <File>
@@ -450,17 +465,17 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>mDriver</GroupName>
+          <GroupName>mSys</GroupName>
           <Files>
             <File>
-              <FileName>mUart1Driver.c</FileName>
+              <FileName>mSys.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\mDriver\uart\mUart1Driver.c</FilePath>
+              <FilePath>..\mSys\mSys.c</FilePath>
             </File>
             <File>
-              <FileName>mTcpDriver.c</FileName>
+              <FileName>mSys_runLed.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\mDriver\tcp\mTcpDriver.c</FilePath>
+              <FilePath>..\mSys\mSys_runLed\mSys_runLed.c</FilePath>
             </File>
           </Files>
         </Group>
